workaround model incompatibility with ARM